# db-connector

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  setup.py
db_connector/: cli.py  credentials.py  db_engine.py  load_data.py  mynotebook.ipynb  process_data.py
tests/: test_cli.py
